Fix z-indexing, spacing

--- a/src/components/Filters/style.module.scss
+++ b/src/components/Filters/style.module.scss
@@ -3,7 +3,7 @@
 .filters {
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 5;
   background-color: var(--background);
   grid-column: 1 / 3;
   display: flex;
