--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -12,7 +12,7 @@
   @media screen and (width > $screen-sm) {
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 5;
   }
 
   @media screen and (width > $screen-md) {
