--- a/src/components/ProductsList/style.module.scss
+++ b/src/components/ProductsList/style.module.scss
@@ -5,6 +5,7 @@
   @include columns(1);
   grid-column: 1 / 3;
   grid-template-rows: min-content;
+  padding-bottom: 24px;
   
   @media screen and (width > $screen-xs) {
     @include columns(2);
